Added link to source code
git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@6 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,8 @@
 institutions.  Actually at the moment we don't have anything, but check back
 soon and the House of Commons will be here.</p>
 
+<p><a href="http://kforge.net/scm/?group_id=11">Source code</a>
+
 <p>Contact: <a href="mailto:francis@flourish.org">francis@flourish.org</a></p>
 
 </body>
