--- a/parlparse/website/index.html
+++ b/parlparse/website/index.html
@@ -250,7 +250,7 @@ These are a bit like press releases, but in parliamentary language.
 <h2>Getting the Data</h2>
 
 <p><strong>Web browser:</strong> 
-Either follow the links to the files above, or <a href="http://ukparse.kforge.net/parldata">browse all
+Either follow the links to the files above, or <a href="http://ukparse.kforge.net/parldata/">browse all
 the parlparse data</a>.  There's also a <a
 href="http://theyworkforyou.com/pwdata/">spare copy on TheyWorkForYou.com</a>.
 
