--- a/parlparse/website/index.html
+++ b/parlparse/website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>United Kingdom Parser (ukparse)</title>
+<title>Parliament Parser (parlparse)</title>
 <title><?=$title?></title>
 <style type="text/css"><!--
 body {background-color: #ffffff;  color: #000000; }
