Modified a number of tables with new data.
git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@2002 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/lawdata/cases/rpts/subtable/rpts_subtable_CAM_FR_F77_South Cambridgeshire_2007.html
+++ b/lawdata/cases/rpts/subtable/rpts_subtable_CAM_FR_F77_South Cambridgeshire_2007.html
@@ -116,12 +116,20 @@ specific Case Reference or Location</P>
 <TH width="11%" bgColor=#ffccff height=19>Decision</TH>
 <TH width="11%" bgColor=#ffccff height=19>Reasons</TH>
 <tr>
-<td bgcolor="#CCCCCC">CAM/12UG/F77/2006/0114</td>
-<td bgcolor="#CCCCCC">10-Jan-2007</td>
-<td bgcolor="#CCCCCC">Royston</td>
-<td bgcolor="#CCCCCC"> 22 Ashwell Road</td>
+<td bgcolor="#CCCCCC">CAM/12UG/F77/2006/0120</td>
+<td bgcolor="#CCCCCC">05-Feb-2007</td>
+<td bgcolor="#CCCCCC">Daventry</td>
+<td bgcolor="#CCCCCC"> 24 Norton Road</td>
 <td bgcolor="#CCCCCC">N/A</td>
-<td bgcolor="#CCCCCC"><a href="..\Files\2007\January\00000P1V.htm">View Html</a>  <a href="..\Files\2007\January\00000P1V.pdf">View PDF</a>  </td>
+<td bgcolor="#CCCCCC"><a href="..\Files\2007\February\100009Z0.htm">View Html</a>  <a href="..\Files\2007\February\100009Z0.pdf">View PDF</a>  </td>
+</tr>
+<tr>
+<td bgcolor="#E0E0E0">CAM/12UG/F77/2006/0114</td>
+<td bgcolor="#E0E0E0">10-Jan-2007</td>
+<td bgcolor="#E0E0E0">Royston</td>
+<td bgcolor="#E0E0E0"> 22 Ashwell Road</td>
+<td bgcolor="#E0E0E0">N/A</td>
+<td bgcolor="#E0E0E0"><a href="..\Files\2007\January\00000P1V.htm">View Html</a>  <a href="..\Files\2007\January\00000P1V.pdf">View PDF</a>  </td>
 </tr>
 </TBODY></TABLE>
 </TBODY></TABLE>
