--- a/lawdata/cases/rpts/subtable/rpts_subtable_CHI_LV_NFE_Brighton and Hove_2007.html
+++ b/lawdata/cases/rpts/subtable/rpts_subtable_CHI_LV_NFE_Brighton and Hove_2007.html
@@ -116,20 +116,28 @@ specific Case Reference or Location</P>
 <TH width="11%" bgColor=#ffccff height=19>Decision</TH>
 <TH width="11%" bgColor=#ffccff height=19>Reasons</TH>
 <tr>
-<td bgcolor="#CCCCCC">CHI/00ML/OCE/2006/0044</td>
-<td bgcolor="#CCCCCC">27-Jan-2007</td>
+<td bgcolor="#CCCCCC">CHI/00ML/OCE/2007/0014</td>
+<td bgcolor="#CCCCCC">07-Mar-2007</td>
 <td bgcolor="#CCCCCC">Brighton</td>
-<td bgcolor="#CCCCCC"> 12 Walpole Terrace</td>
-<td bgcolor="#CCCCCC"><a href="..\Files\2007\January\50001EQM.htm">View Html</a>  <a href="..\Files\2007\January\50001EQM.pdf">View PDF</a>  </td>
+<td bgcolor="#CCCCCC"> 41 Grand Parade</td>
+<td bgcolor="#CCCCCC">N/A</td>
 <td bgcolor="#CCCCCC">N/A</td>
 </tr>
 <tr>
-<td bgcolor="#E0E0E0">CHI/00ML/OCE/2006/0086</td>
-<td bgcolor="#E0E0E0">09-Jan-2007</td>
+<td bgcolor="#E0E0E0">CHI/00ML/OCE/2006/0044</td>
+<td bgcolor="#E0E0E0">27-Jan-2007</td>
 <td bgcolor="#E0E0E0">Brighton</td>
-<td bgcolor="#E0E0E0"> 93 / 95 Bear Road</td>
-<td bgcolor="#E0E0E0"><a href="..\Files\2007\January\50001DPZ.htm">View Html</a>  <a href="..\Files\2007\January\50001DPZ.pdf">View PDF</a>  </td>
+<td bgcolor="#E0E0E0"> 12 Walpole Terrace</td>
+<td bgcolor="#E0E0E0"><a href="..\Files\2007\January\50001EQM.htm">View Html</a>  <a href="..\Files\2007\January\50001EQM.pdf">View PDF</a>  </td>
 <td bgcolor="#E0E0E0">N/A</td>
+</tr>
+<tr>
+<td bgcolor="#CCCCCC">CHI/00ML/OCE/2006/0086</td>
+<td bgcolor="#CCCCCC">09-Jan-2007</td>
+<td bgcolor="#CCCCCC">Brighton</td>
+<td bgcolor="#CCCCCC"> 93 / 95 Bear Road</td>
+<td bgcolor="#CCCCCC"><a href="..\Files\2007\January\50001DPZ.htm">View Html</a>  <a href="..\Files\2007\January\50001DPZ.pdf">View PDF</a>  </td>
+<td bgcolor="#CCCCCC">N/A</td>
 </tr>
 </TBODY></TABLE>
 </TBODY></TABLE>
