--- a/lawdata/cases/rpts/subtable/rpts_subtable_CHI_LV_SVC_Brighton and Hove_2007.html
+++ b/lawdata/cases/rpts/subtable/rpts_subtable_CHI_LV_SVC_Brighton and Hove_2007.html
@@ -120,7 +120,7 @@ specific Case Reference or Location</P>
 <td bgcolor="#CCCCCC">27-Feb-2007</td>
 <td bgcolor="#CCCCCC">Hove</td>
 <td bgcolor="#CCCCCC"> 79 The Drive</td>
-<td bgcolor="#CCCCCC"><a href="..\Files\2007\February\50001G2U.htm">View Html</a>  <a href="..\Files\2007\February\50001G2U.pdf">View PDF</a>  </td>
+<td bgcolor="#CCCCCC"><a href="..\Files\2007\February\400029IX.htm">View Html</a>  <a href="..\Files\2007\February\400029IX.pdf">View PDF</a>  </td>
 <td bgcolor="#CCCCCC">N/A</td>
 </tr>
 <tr>
