git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@2653 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/unparse/web2/aboutpage.html
+++ b/unparse/web2/aboutpage.html
@@ -1,67 +1,165 @@
-<div id="sectors">
-<div id="securitycouncil">
-<h2>Security Council</h2>
-<h3>Recent meetings</h3>
-<ul class="cslist">
-<li>2007-04-26 <a href="/securitycouncil/meeting_5685">Middle East</a></li>
-<li>2007-05-24 <a href="/securitycouncil/meeting_5686">Burundi</a></li>
-<li>2007-05-22 <a href="/securitycouncil/meeting_5684">Sudan</a></li>
-<li>2007-05-22 <a href="/securitycouncil/meeting_5683">Palestinian question</a></li>
-<li>2007-05-21 <a href="/securitycouncil/meeting_5683">Middle East</a></li>
-<li>2007-05-20 <a href="/securitycouncil/meeting_5681">Iraq</a></li>
-<li>2007-05-20 <a href="/securitycouncil/meeting_5682">East Timor</a></li>
-<li>2007-05-19 <a href="/securitycouncil/meeting_5680">Afghanistan</a></li>
-<li>2007-05-19 <a href="/securitycouncil/meeting_5679">Sanctions</a></li>
-<li>2007-05-18 <a href="/securitycouncil/meeting_5679">Briefings</a></li>
-</ul>
 
-<h3 class="browse">Browse</h3>
-<p><a href="/securitycouncil">Meetings by topic</a></p>
-<p><a href="/securitycouncil/documents">All Security Council documents</a></p>
+<h3>Outline</h3>
 
-<!--
-<p>By year: <a href="/securitycouncil_1994/documents">1994</a> <a href="/securitycouncil_1995/documents">1995</a> <a href="/securitycouncil_1996/documents">1996</a> <a href="/securitycouncil_1997/documents">1997</a> <a href="/securitycouncil_1998/documents">1998</a> <a href="/securitycouncil_1999/documents">1999</a> <a href="/securitycouncil_2000/documents">2000</a> <a href="/securitycouncil_2001/documents">2001</a> <a href="/securitycouncil_2002/documents">2002</a> <a href="/securitycouncil_2003/documents">2003</a> <a href="/securitycouncil_2004/documents">2004</a> <a href="/securitycouncil_2005/documents">2005</a> <a href="/securitycouncil_2006/documents">2006</a> <a href="/securitycouncil_2007/documents">2007</a> </p>
--->
+<p>The <a href="http://en.wikipedia.org/wiki/United_Nations">United Nations</a> is 
+a system of international bodies constituted by the Governments of the world and established
+in June 1945 based in part on the structure of <a href="http://en.wikipedia.org/wiki/League_of_Nations">League of Nations</a>
+for the following <a href="http://www.un.org/aboutun/charter/">stated aims</a>:</p>
+<ul><li>To save succeeding generations from the scourge of war, which twice in our lifetime has brought untold sorrow to mankind</li>
+<li>To reaffirm faith in fundamental human rights, in the dignity and worth of the human person, in the equal rights of men and women and of nations large and small</li>
+<li>To establish conditions under which justice and respect for the obligations arising from treaties and other sources of international law can be maintained</li>
+<li>To promote social progress and better standards of life in larger freedom</li></ul>
 
-</div>
-<div id="generalassembly">
-<h2>General Assembly</h2>
-<h3>Recent meetings</h3>
-<ul class="cslist">
-<li>2006-11-30 <a href="/generalassembly_61/meeting_61/pg024-bk02">The situation in the Middle East</a></li>
-<li>2006-11-28 <a href="/generalassembly_61/meeting_58/pg001-bk02">The situation in Afghanistan</a></li>
-<li>2006-12-20 <a href="/generalassembly_61/meeting_83/pg015-bk10">Training and Research</a></li>
-<li>2006-12-20 <a href="/generalassembly_61/meeting_83/pg008-bk14">Sustainable Development</a></li>
-<li>2006-12-14 <a href="/generalassembly_61/meeting_79/pg004-bk01">University for Peace</a></li>
-<li>2006-12-14 <a href="/generalassembly_61/meeting_79/pg005-bk06">United Nations Relief and Works Agency for Palestine Refugees in the Near East Report of the Special Political and Decolonization Committee (Fourth Committee)</a></li>
-<li>2006-12-04 <a href="/generalassembly_61/meeting_64/pg001-bk03">The role of diamonds in fuelling conflict</a></li>
-</ul>
+<p>It has two central political bodies, the 
+<a href="http://en.wikipedia.org/wiki/United_Nations_General_Assembly">General Assembly</a>
+and the <a href="http://en.wikipedia.org/wiki/United_Nations_Security_Council">Security Council</a>, 
+each which hold official meetings, publish transcripts of those meetings, 
+hold votes cast in the names of its member nations, and pass resolutions.  
+There are many other important bodies, committees and agencies, but these 
+two are the least scrutinized because they are essentially 
+<a href="http://en.wikipedia.org/wiki/Sovereign">sovereign</a>.</p>
 
-<h3 class="browse">Browse</h3>
-<p><a href="/generalassembly">Meetings by topic</a></p>
-<p><a href="/generalassembly/documents">All General Assembly documents</a></p>
-</div>
+<h3>Documents</h3>
 
+<p>Like many political institutions, the United Nations is a complex paper-shuffling bureaucracy
+with its <a href="http://www.un.org/ga/coi/">Committee on Information</a>,
+<a href="http://www.un.int/wgi/oewgi.htm">Ad-Hoc Working Group on Infomatics</a>, and a
+truly astounding challenge of multi-lingualism.  
+Until recently, the only access a citizen had to what was going on at the United Nations 
+was by either attending open meetings in person, reading about it in 
+the press or in newsletters circulated by NGOs, or finding the information 
+in one of the many 
+<a href="http://www.un.org/Depts/dhl/deplib/countries/index.html">Depository Libraries</a>
+scattered across the world.</p>
 
-<div id="about">
-<h2>About Us</h2>
-<p>Thirteen years of official <a href="http://en.wikipedia.org/wiki/United_Nations">United Nations</a> 
-meetings of the <a href="http://en.wikipedia.org/wiki/United_Nations_General_Assembly">General Assembly</a> 
-and the <a href="http://en.wikipedia.org/wiki/United_Nations_Security_Council">Security Council</a> 
-including many supporting documents are available on this site 
-in glorious pastel shades.  You will be able to find every publically reported members' vote  
-and resolution (both passed and vetoed) in this time period.</p>
+<p>The United Nations has circulated its paper documents in electronic form in PDF files 
+among its offices for many years.  Since the main-streaming of the internet, many of 
+these documents have been on-line and available to the public from it's website
+through a disorganized system of index pages, such as
+<a href="http://www.un.org/documents/ga/res/13/ares13.htm">General Assembly Resolutions
+adopted during the thirteenth session</a>.</p>
 
-<p>This work is for use as a tool to facilitate browsing and research and 
-to help create citations for articles in places such as wikipedia.</p>   
+<p>Unfortunately, these hyper-links refer to temporary URLs which only 
+work for a single computer at a time.  For example, 
+the <i>Question of of the representation of China at the United Nations (resolution 1239(XIII))</i>
+links on my computer to 
+<a href="http://daccessdds.un.org/doc/RESOLUTION/GEN/NR0/746/83/IMG/NR074683.pdf?OpenElement">http://daccessdds.un.org/doc/RESOLUTION/GEN/NR0/746/83/IMG/NR074683.pdf?OpenElement</a>,
+and this link won't work on yours.
+This means that, while it is technically possible for some people to
+find these documents, it is impossible to share these documents by 
+recording links on the internet.</p>
 
-<p>This project has been created by the people behind 
-<a href="http://www.publicwhip.org.uk">Public whip</a> using all 
-the latest screen scraping and PDF text parsing <a href="http://www.python.org">technology</a>.  
-Email team@publicwhip.org.uk for details or look for random 
-parts of the story on the <a href="http://www.freesteel.co.uk/wpblog">Freesteel blog</a>.</p>
-</div>
+<p>However, by using a system of internet mirroring, it is possible to work round
+this problem and provide a generic link such as
+<a href="http://www.undemocracy.com/A-RES-1239(XIII).pdf">http://www.undemocracy.com/A-RES-1239(XIII).pdf</a>.</p>
 
+<h3>Electronic format</h3>
+
+<p>It should be stressed that there is more to using the power of information technology
+than simply posting facsimiles of documents on-line.  This doesn't make
+them searchable or allow for tabulations of data drawn from many of those documents.
+While the Governments know very well what way their delegates voted in
+the General Assembly because they wrote the instructions,
+the citizens don't have access to this list.</p>
+
+<p><a href="http://www.undemocracy.com/A-57-PV.57/page_8">Here is an example of a
+recorded vote</a>.  Only by scanning though all the documents and seaching for
+the name of your country is it possible to recover this information.</p>
+
+<p>Once these documents are in a structured processed form (not PDF copies of
+paper documents) is it possible to use software to access the information
+and allow for citizens to directly find out what their country has been doing there.</p>
+
+<p>It appears that, while many of the pre-1994 United Nations documents are
+bitmap scans embedded in a PDF file, later ones contain character
+information which can be extracted using a piece of free software called
+<a href="http://pdftohtml.sourceforge.net/">PDFTOHTML</a>.</p>
+
+<p>This results in a file which contains the pixel positioning of
+each word as it appears on the page, for example:
+
+<blockquote><font size="-1"><pre>
+&lt;text top="902" left="122" width="327" height="14" font="6"&gt;&lt;b&gt;The President &lt;/b&gt;&lt;i&gt;(interpretation from French)&lt;/i&gt;: None&lt;/text&gt;
+&lt;text top="920" left="90" width="358" height="14" font="1"&gt;the less, I should like to endorse strongly the practical&lt;/text&gt;
+&lt;text top="938" left="90" width="358" height="14" font="1"&gt;suggestion made at previous sessions that each delegation&lt;/text&gt;
+&lt;text top="956" left="90" width="358" height="14" font="1"&gt;designate someone to be present at the scheduled time. I&lt;/text&gt;
+&lt;text top="974" left="90" width="358" height="14" font="1"&gt;sincerely hope that all delegations will cooperate in this&lt;/text&gt;
+&lt;text top="992" left="90" width="42" height="14" font="1"&gt;regard.&lt;/text&gt;
+&lt;text top="109" left="512" width="12" height="14" font="1"&gt;In&lt;/text&gt;
+&lt;text top="109" left="543" width="60" height="14" font="1"&gt;paragraph&lt;/text&gt;
+&lt;text top="109" left="621" width="19" height="14" font="1"&gt;11,&lt;/text&gt;
+&lt;text top="109" left="659" width="18" height="14" font="1"&gt;the&lt;/text&gt;
+&lt;text top="109" left="695" width="47" height="14" font="1"&gt;General&lt;/text&gt;
+&lt;text top="109" left="761" width="67" height="14" font="1"&gt;Committee&lt;/text&gt;
+&lt;text top="127" left="481" width="347" height="14" font="1"&gt;recommends to the General Assembly that delegations&lt;/text&gt;
+&lt;text top="145" left="481" width="347" height="14" font="1"&gt;should be reminded of the utmost importance of&lt;/text&gt;
+&lt;text top="163" left="481" width="71" height="14" font="1"&gt;punctuality.&lt;/text&gt;
+&lt;text top="163" left="566" width="262" height="14" font="1"&gt;May I take it that the General Assembly&lt;/text&gt;
+&lt;text top="181" left="481" width="194" height="14" font="1"&gt;approves that recommendation?&lt;/text&gt;
+&lt;text top="218" left="512" width="111" height="14" font="5"&gt;&lt;i&gt;It was so decided.&lt;/i&gt;&lt;/text&gt;
+</pre></font></blockquote>
+
+<p>Once this has been done, it takes a good many days of hacking work
+using the very effective text processing capabilities of <a href="http://www.python.org">Python</a>
+and fixing many of the invisible typos to develop a program
+(<i>free software and available <a href="http://project.knowledgeforge.net/ukparse/svn/trunk/unparse/">here</a></i>)
+which can process it into a
+structured form like:</p>
+
+<blockquote><font size="-1"><pre>
+&lt;div class="spoken" id="pg002-bk08"&gt;
+&lt;h3 class="speaker"&gt; &lt;span class="name"&gt;The President&lt;/span&gt; &lt;span class="language"&gt;French&lt;/span&gt; &lt;/h3&gt;
+	&lt;p id="pg002-bk08-pa01"&gt;None the less, I should like to endorse strongly the practical suggestion....&lt;/p&gt;
+	&lt;p id="pg002-bk08-pa02"&gt;In paragraph 11, the General Committee recommends to the General Assembly that...&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;div class="italicline" id="pg002-bk09"&gt;
+	&lt;p id="pg002-bk09-pa01"&gt;It was so decided.&lt;/p&gt;
+&lt;/div&gt;
+</pre></font></blockquote>
+
+<p>This then is amenable to the website generating tools and can be used to
+generate many of the capabilities that we should expect from online information, 
+such as searchability and automatic hyperlinks.</p>
+
+<p>Ideally, a bureaucratic organization such as the United Nations would migrate
+away from paper and conduct its business using structured data without
+reference to the printed documents, 
+in the way that manufacturing regularly uses CAD techniques 
+without needing to produce technical drawings;
+the virtual design directly instructing the computer controlled machines.
+Unfortunately, this us unlikely to happen any time soon.</p>
+
+<h3>Purposes</h3>
+
+<p>This website is a resource for public researchers who contribute to
+wikipedia, blogs, and other community discussion forums
+where citizens inform themselves and eventually hold their Governments to account.
+It has no association, formal or informal, with the United Nations
+or any other political group or NGO.
+As such, it is independent of the unspoken constraints put upon such
+organizations never to criticize or enable the criticism of the Governments
+on which their existence depends.</p>
+
+<p>Serious critique is possible from outside the
+system outside the system by groups such as 
+<a href="http://www.globalpolicy.org">Global Policy</a> 
+and scholarly studies such as
+<a href="http://www.globalpolicy.org/security/membship/electedmembers/2006/06howmuch.pdf">
+How Much Is a Seat on the Security Council Worth? Foreign Aid and Bribery at the United Nations</a>, 
+and by citizens of their country who find out what's being done in their name 
+and take their Governments to task for it.
+You can write a letter to the ambassador from your country and 
+ask them to explain why they voted in a particular way.</p>
+
+<p>This project has been created by the people behind
+<a href="http://www.publicwhip.org.uk">Public whip</a> using
+screen scraping and PDF text parsing <a href="http://www.python.org">technology</a>.
+Email <i>team@undemocracy.com</i> for details.
+Some commentary about how it was moved forward can be found on the
+<a href="http://www.freesteel.co.uk/wpblog">Freesteel blog</a>.
+It is sporadically under development as just a spare time 
+activity.</p>
 
 </div>
 
