Fixed some files that nest tables unexpectely (and unnecessarily)
git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@3125 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/parldata/cmpages/sp/official-reports/or1999-05-13_1.html
+++ b/parldata/cmpages/sp/official-reports/or1999-05-13_1.html
@@ -61,8 +61,10 @@ at 14:31</i>]</font><font face="Arial,Helvetica"></font>
 </center><p><center><strong><font face="Arial,Helvetica"><em>First Minister</em></font></strong></center>
 
 <br><font face="Arial,Helvetica"></font>&nbsp;
-<table>
+</td>
+</tr>
 <tr>
+
 <td VALIGN=TOP WIDTH="10%"><font face="Arial,Helvetica"><font size=-1>Col&nbsp;<a NAME="Col13"></a>13</font></font></td>
 
 <td VALIGN=TOP WIDTH="90%"><font face="Arial,Helvetica"><strong>The Presiding
@@ -106,9 +108,9 @@ They are, in alphabetical order:</font></td>
 <td VALIGN=TOP WIDTH="10%"><font face="Arial,Helvetica"><font size=-1>Col&nbsp;<a NAME="Col14"></a>14</font></font></td>
 
 <td VALIGN=TOP WIDTH="90%"><font face="Arial,Helvetica">Dennis Canavan</font>
-<br><font face="Arial,Helvetica">Donald Dewar</font>
-<br><font face="Arial,Helvetica">David McLetchie</font>
-<br><font face="Arial,Helvetica">Mr Alex Salmond</font><font face="Arial,Helvetica"></font>
+<br><font face="Arial,Helvetica">Donald Dewar,</font>
+<br><font face="Arial,Helvetica">David McLetchie,</font>
+<br><font face="Arial,Helvetica">Mr Alex Salmond.</font><font face="Arial,Helvetica"></font>
 <p><font face="Arial,Helvetica">I shall shortly ask those members who wish
 to cast their vote for Dennis Canavan to do so. You should remember that
 there will be four rounds of voting. Members will have 30 seconds in which
@@ -922,9 +924,6 @@ each party leader has to notify me of the name of their party's representative
 on the Parliamentary Bureau, which will meet for the first time on Monday,
 and an item on that issue will be on the agenda.</font><font face="Arial,Helvetica"></font>
 <p><i><font face="Arial,Helvetica">Meeting closed at 15:17.</font></i></td>
-</tr>
-</table>
-<font face="Arial,Helvetica"></font></td>
 </tr>
 </table></center>
 
