--- a/parldata/cmpages/sp/official-reports/or2001-06-21_1.html
+++ b/parldata/cmpages/sp/official-reports/or2001-06-21_1.html
@@ -39,7 +39,9 @@
 <p align="CENTER"><a name="HeadingSection"></a><strong>Scottish Parliament</strong></p>
 <p align="CENTER"><em>Thursday 21 June 2001</em></p>
 <p align="CENTER">[THE PRESIDING OFFICER<em> opened the meeting at 09:30</em>]</p>
-<p>Scotland's Place in the World<table><tr><td valign="TOP" width="10%"><font size="-1">Col&nbsp;<a name="Col1767">1767</a></font></td><td valign="TOP" width="90%">
+<p>Scotland's Place in the World</p>
+</td></tr>
+<tr><td valign="TOP" width="10%"><font size="-1">Col&nbsp;<a name="Col1767">1767</a></font></td><td valign="TOP" width="90%">
 <p><strong>The Presiding Officer (Sir David Steel): </strong>We have two debates this morning before a ministerial statement. The Presiding Officers have looked at the list of people who have already requested to speak&#151;even before we have asked for request-to-speak buttons to be pressed&#151;and both debates are oversubscribed. I warn members that it is unlikely that we will be able to call everyone. Timekeeping will therefore be strict. I ask everyone, including those on the front benches, to keep to their allotted time.</p>
 <p>We begin with the Scottish National Party debate on motion S1M-2030, in the name of John Swinney, on Scotland's place in the world, and two amendments to that motion.</p>
 <p>09:31</p>
@@ -3326,8 +3328,6 @@ Young, John (West of Scotland) (Con)</p>
 <p>In discussions on those complexities, the voices of young carers need to be heard. That is why we helped to fund the young carers conference, which led to the establishment of the national young carers forum. I welcome the concept of the forum as an avenue for discussing the wide range of issues that affect the lives of young carers and I look forward to the forum's contribution to improving those lives.</p>
 <p>I end by welcoming once again the two debates that we have had on important carers issues this week and by assuring members of our determination to make further progress on those issues for the benefit of all concerned.</p>
 <p><em>Meeting closed at 17:42.</em></p>
-</td></tr></table>
-
 </td></tr>
 <!-- end of variable data -->
 </table>
