--- a/parldata/cmpages/sp/official-reports/2007.html
+++ b/parldata/cmpages/sp/official-reports/2007.html
@@ -185,22 +185,30 @@
           <table width="100%" cellpadding="0" cellspacing="0" class="pushedTable">
             <tr valign="top">
               <td><p><strong><a name="12" id="12"></a> December</strong></p>
-                <p><a href="or-07/sor1213-01.htm">13 December 2007 </a><br />
-Sport (Young People)<br />
-Civil Liberties<br />
-Question Time<br />
-Scottish Executive<br />
-General Questions<br />
-First Minister's Question Time<br />
-Question Time<br />
-Scottish Executive<br />
-Rural Affairs And The Environment<br />
-Justice And Law Officers<br />
-Local Government Finance Settlement 2008 To 2011<br />
-Local Government Finance Settlement 2008 To 2011<br />
-Points Of Order<br />
+                <p><a href="or-07/sor1219-01.htm">19 December 2007 </a><br />
+Time For Reflection<br />
+Business Motion<br />
+Transport<br />
+European Union Reform Treaty<br />
+Business Motions<br />
 Decision Time<br />
-Glasgow's Pakistani Community</p>
+Border Television News</p>
+                <p><a href="or-07/sor1213-01.htm">13 December 2007 </a><br />
+  Sport (Young People)<br />
+  Civil Liberties<br />
+  Question Time<br />
+  Scottish Executive<br />
+  General Questions<br />
+  First Minister's Question Time<br />
+  Question Time<br />
+  Scottish Executive<br />
+  Rural Affairs And The Environment<br />
+  Justice And Law Officers<br />
+  Local Government Finance Settlement 2008 To 2011<br />
+  Local Government Finance Settlement 2008 To 2011<br />
+  Points Of Order<br />
+  Decision Time<br />
+  Glasgow's Pakistani Community</p>
                 <p><a href="or-07/sor1212-01.htm">12 December 2007 </a><br />
                     Time For Reflection<br />
                     Health Strategy<br />
